	* configure.in: Added AC_REVISION
	* Makefile.am: yourSource.cc -> yourSource.cpp.
	* cgicc/CgiDefs.h: Removed, added CgiDefs.h.in.
	* cgicc/CgiDefs.h.in: Added USE_NAMESPACES
	* cgicc/config.h.in: Removed USE_NAMESPACES
	* cgicc/Makefile.am: config.h no longer installed.
	* acconfig.h: Removed USE_NAMESPACES
	* configure.in: No longer AC_DEFINE USE_NAMESPACES; AC_SUBST instead

1999-08-06  Stephen F. Booth  <sbooth@saaba.lmi.net>

	* cgicc/HTMLElements.{hh,cc}: Added add() method, to allow
	embedded HTMLElements to be embedded after object construction.

1999-08-06  Christof Danzl  <cdanzl@cosy.sbg.ac.at>

	* cgicc/HTMLElements.{hh,cc}: Completely reworked for new
	HTML generation strategy.
	* cgicc/HTML*.{hh,cc}: Removed (see above).
	* cgicc/HTMLClasses.hh: Completely reworked for new HTML
	generation strategy.
	* cgicc/HTMLGeneric.hh: New file, for new HTML generation
	strategy.

1999-08-05  Stephen F. Booth  <sbooth@saaba.lmi.net>

	* configure.in: Added AC_CONFIG_AUX_DIR(support)

1999-08-03  Stephen F. Booth  <sbooth@saaba.lmi.net>

	* cgicc/HTMLAttributes.hh: Changed all add methods to set.
	* cgicc/HTMLAttributes.cc: Changed all add methods to set.

1999-08-02  Stephen F. Booth  <sbooth@saaba.lmi.net>

	* cgicc/Cgicc.cc(copy_if): Removed prototype, moved definition
	inside of CGICC_NAMESPACE block.
	* Makefile.am: Added check-news, dist-zip to AUTOMAKE_OPTIONS

1999-07-30  Stephen F. Booth  <sbooth@saaba.lmi.net>

	* cgicc/HTTPHeaders.hh(HTTPCookie): Reworked to use cookie spec
	per RFC 2109 (use seconds for maximum age, added comment and
	version fields).
	* cgicc/HTTPHeaders.hh(HTTPCookie): Removed getExpires, replaced
	by getMaxAge.  Added getComment.
	* cgicc/HTTPHeaders.cc(HTTPCookie): Changed ctor and render.
	* info/classes-http.texinfo: Changed documentation for HTTPCookie
	to reflect new cookie spec.

1999-06-24  Stephen F. Booth  <sbooth@saaba.lmi.net>

	* cgicc/HTMLAttributes.hh: Removed class HTMLAtomicAttribute,